--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="src/output.css" rel="stylesheet" />
+
+    <style>
+      .gradient {
+        background-image: linear-gradient(to bottom right, #83d475, #57c84d);
+      }
+    </style>
   </head>
   <body>
     <section class="w-screen mx-auto px-4">
@@ -12,7 +18,7 @@
           <img src="assets/logo-no-background.png" class="h-20 w-20 mr-2" />
         </div>
 
-        <div class="block lg:hidden ">
+        <div class="block lg:hidden">
           <a
             class="flex items-center px-3 py-2 rounded border border-indigo-400 text-indigo-500 hover:text-indigo-700 hover:border-indigo-700"
           >
@@ -72,7 +78,26 @@
       </nav>
     </section>
 
-    <section class="w-screen mx-auto py-4 bg-indigo-700 h-32">About Me</section>
+    <section class="w-screen mx-auto py-4 gradient">
+      <div class="px-16 py-8 text-white text-center flex ">
+        <div class="w-full">
+         
+          <h2 class="text-3xl font-bold mb-3">
+            Hi, I'm Munir. Welcome My Blog
+          </h2>
+          <h3 class="text-lg mb-2">Saya adalah Web Developer</h3>
+        </div>
+        <div class="w-full">
+          <div class="px-4 py-4">
+            <img
+              src="assets/myfoto.jpeg"
+              class="shadow-lg rounded-full max-w-full mx-auto w-48 h-48 object-cover text-center hover:bg-white hover:border-3 ease-in-out duration-0.5"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="w-screen mx-auto py-4 bg-white h-32">
       Skill Framework
     </section>
